# NAS-PRO

./: .gitignore  CMakeLists.txt  README-NATIVE.md  README.md  build-desktop.sh  build-final.sh  build-full-system.sh  build-gui.sh  build-iso.sh  check-qt.sh  create-system.sh  index.html  install.sh  package-lock.json  package.json  start-desktop.sh  start-gui.sh  start-nas-desktop.sh  start-nas-os.sh  start-nas-pro.sh  start-nas.sh  start-ui.sh  vite.config.ts
.github/workflows/: build-iso.yml  build.yml
NAS-PRO/: index.html  package-lock.json  package.json
config/grub/: grub.cfg
config/package-lists/: nas-pro.list
config/systemd/: nas-pro.service
iso/: grub.cfg  index.html
iso/assets/: index-CaIg0p7n.js  index-DaCxaBLD.css
scripts/: boot.sh
src/: App.tsx
src/components/: AnimatedBackground.tsx  AppStore.tsx  BackupCenter.tsx  BootScreen.tsx  ControlPanel.tsx  Desktop.tsx  DockerManager.tsx  FanMonitor.tsx  FileManager.tsx  GpuPanel.tsx  LoginScreen.tsx  MediaPlayer.tsx  MusicPlayer.tsx  NetworkCenter.tsx  PhotoApp.tsx  SecurityCenter.tsx  StorageManager.tsx  TaskManager.tsx  Terminal.tsx  UgosProSystem.tsx  UploadManager.tsx  VideoPlayer.tsx  VpnManager.tsx  WizardModal.tsx
src/data/: catalog.ts  hooks.ts  theme.ts
system/: nas-init.sh
ui/apps/: registry.txt
ui/core/: window_manager.cpp  window_manager.h
ui/desktop/: CMakeLists.txt  final_shell.cpp  icons.cpp  icons.sh  launcher.sh  login.cpp  main.cpp  nas-desktop.cpp  nas-shell.sh  os_shell.cpp  shell.cpp  start_menu.cpp  taskbar.cpp  taskbar_final.cpp  window.cpp  window_manager.sh
(+16 files in other folders)
